// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      <FormattedMessage
        defaultMessage="Expenses"
        id="expense-list.expenses"
        values={Object {}}
      />
       
    </div>
    <div
      className="show-for-desktop"
    >
      <FormattedMessage
        defaultMessage="Expense"
        id="expense-list.expense"
        values={Object {}}
      />
        
    </div>
    <div
      className="show-for-desktop"
    >
      <FormattedMessage
        defaultMessage="Amount"
        id="expense-list.amount"
        values={Object {}}
      />
       
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        <FormattedMessage
          defaultMessage="No expenses"
          id="expense-list.emtry"
          values={Object {}}
        />
          
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      <FormattedMessage
        defaultMessage="Expenses"
        id="expense-list.expenses"
        values={Object {}}
      />
       
    </div>
    <div
      className="show-for-desktop"
    >
      <FormattedMessage
        defaultMessage="Expense"
        id="expense-list.expense"
        values={Object {}}
      />
        
    </div>
    <div
      className="show-for-desktop"
    >
      <FormattedMessage
        defaultMessage="Amount"
        id="expense-list.amount"
        values={Object {}}
      />
       
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
